# pseudol10nutil

./: README.md  TODO.md  pyproject.toml  requirements.txt  test_pseudol10nutil.py  tox.toml
examples/webapp/: Dockerfile  app.py  requirements.txt  test_app.py
examples/webapp/templates/: pseudolocalize_template.html
pseudol10nutil/: pseudol10nutil.py  transforms.py
src/pseudol10nutil/: pseudol10nutil.py  transforms.py
testdata/: helloworld.py
testdata/locales/eo/LC_MESSAGES/: helloworld.po
